Mac Java6用のVMオプションを追加